2007-08-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (config.h): Use better delimiters to pass / in sed
	exprs.

2007-08-21  Derek Price  <derek@ximbiot.com>

	* configure.in.in, Makefile.am: Use new PACKAGE_CONFIG string defined
	by configure.

2006-09-25  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in: Update from ../config.h.in

2006-09-22  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in (HAVE_MAP_ANONYMOUS, HAVE_MMAP,
	HAVE_POSIX_MEMALIGN, MAP_ANONYMOUS, mkstemp): Remove as unused.
	(__MKSTEMP_PREFIX): New define as rpl_.
	(getpass): Define as gnu_getpass.
	* Maekfile.in, stamp-chi, config.h.in, config.h: Regenerated.
	
2006-09-18  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in (HAVE_DECL_*): Define to 0 instead of undef to
	allow GNULIB-based source files to compile correctly.
	* stamp-chi, config.h.in, config.h: Regenerated.
	
2006-09-02  Mark D. Baushke  <mdb@gnu.org>

	* inttypes.h: Provide a windows wrapper for inttypes.h based on
	the previous version which is now generated from lib/inttypes_.h.
	* Makefile.am: Updated based on ../lib/Makefile.am
	(stamp-chi): Use $(srcdir)/mkconfig.pl in rule.
	* config.h.in.in: Updated based on ../config.h.in changes.
	* Makefile.in, config.h, config.h.in, stamp-chi, stdint.h:
	Regenerated.
	Note: This patch may break the windows platform build if it needs
	any of the hacks provided in lib/fcntl_.h

2006-08-23  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in: Updated based on ../config.h.in changes.
	* Makefile.in, config.h, config.h.in, stamp-chi, stdint.h:
	Regenerated.

2006-08-16  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in: Updated based on ../config.h.in changes.
	* Makefile.in, config.h, config.h.in, stamp-chi, stdint.h:
	Regenerated.

2006-08-12  Mark D. Baushke  <mdb@gnu.org>

	* config.h, config.h.in, config.h.in.in, stamp-chi: Regenerated.

2006-07-23  Mark D. Baushke  <mdb@gnu.org>

	* dirent.c (opendir): Conform to C89 needs to have parenthesis
	around the type for a sizeof operator.