@@ -61,6 +61,7 @@ SUBDIRS = SCC
 ### Maintainer targets
 ###
 MAINTAINERCLEANFILES =
+MOSTLYCLEANFILES =
 DISTCLEANFILES =
 
 all-local: config.h stdbool.h stdint.h
@@ -166,7 +167,32 @@ stamp-sh2: $(top_srcdir)/lib/stdint_.h
 	      cp stdint.tmp $(srcdir)/stdint.h)
 	-@rm -f stdint.tmp
 	@cp $(srcdir)/stdint.h $@
+MOSTLYCLEANFILES += stdint.tmp
 DISTCLEANFILES += stamp-sh2
+
+# We need the following in order to create <sys/stat.h> when the system
+# has one that is incomplete.
+sys/stat.h: stamp-sh3
+stamp-sh3: $(top_srcdir)/lib/stat_.h
+	test -d sys || mkdir sys
+	@echo "/* This file is generated via a rule in Makefile.am from the" \
+	  >stat.h-t
+	@echo " * ../lib/stat_.h.in file." >>stat.h-t
+	@echo " *" >>stat.h-t
+	@echo " * *** DO NOT EDIT THIS FILE DIRECTLY ***" >>stat.h-t
+	@echo " *" >>stat.h-t
+	@echo " * Edit ../lib/stat_.h instead." >>stat.h-t
+	@echo " */" >stat.h-t
+	sed -e 's|@''ABSOLUTE_SYS_STAT_H''@||g' \
+	  <$(top_srcdir)/lib/stat_.h >>stat.h-t
+	@cmp -s stat.h-t $(srcdir)/sys/stat.h \
+	  || (echo "Updating sys/stat.h"; \
+	      cp stat.h-t $(srcdir)/sys/stat.h)
+	-@rm -f stat.h-t
+	@cp $(srcdir)/sys/stat.h $@
+	mv $@-t $@
+MOSTLYCLEANFILES += stat.h-t
+DISTCLEANFILES += stamp-sh3
 
 # for backwards compatibility with the old makefiles
 realclean: maintainer-clean
