@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 1995-2005 The Free Software Foundation, Inc.
+ * Copyright (C) 1995-2007 The Free Software Foundation, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -15,14 +15,24 @@
 /* mkdir.c --- mkdir for Windows NT
    Jim Blandy <jimb@cyclic.com> --- July 1995  */
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+/* System headers.  */
 #include <assert.h>
 
-#include "cvs.h"
-
+/* Get the original WOE32 mkdir, since we overrode it with a macro in
+ * <config.h>.
+ */
 #undef mkdir
 
+#include <direct.h>
+
+
+
 int
-wnt_mkdir (const char *path, int mode)
+woe32_mkdir (const char *path, int mode)
 {
   /* This is true for all extant calls to CVS_MKDIR.  If
      someone adds a call that uses something else later,
