@@ -743,6 +743,9 @@
 /* Define to 1 if the system has the type `ptrdiff_t'. */
 #define HAVE_PTRDIFF_T 1
 
+/* Define to 1 if you have the `raise' function. */
+#undef HAVE_RAISE
+
 /* Define to 1 if you have the `readlink' function. */
 #undef HAVE_READLINK
 
@@ -1477,7 +1480,7 @@
 #undef mbstate_t
 
 /* Define to rpl_mkdir if the replacement function should be used. */
-#undef mkdir
+#define mkdir woe32_mkdir
 
 /* Define to rpl_mktime if the replacement function should be used. */
 #undef mktime
@@ -1706,8 +1709,8 @@
 /* #define SOCK_STRERROR sock_strerror */
 char *sock_strerror (int errnum);
 
-/* #define CVS_MKDIR wnt_mkdir */
-int wnt_mkdir (const char *PATH, int MODE);
+/* #define mkdir woe32_mkdir */
+int woe32_mkdir (const char *path, int mode);
 
 /* #define CVS_RENAME wnt_rename */
 int wnt_rename (const char *, const char *);
@@ -1724,11 +1727,6 @@ void wnt_start_server (int *tofd, int *fromfd,
 
 /* #define stat wnt_stat and #define lstat wnt_stat */
 int wnt_stat (const char *file, struct wnt_stat *sb);
-
-/* =============== Special mkdir Prototype Handling Follows =============== */
-
-#include <direct.h>
-#define mkdir wnt_mkdir
 
 /* ===================== Special Function Definitions ===================== */
 
